Option to select target field for LIME from UI. - Default to first compatible output field. - Clean up some CSS for interpreter controls. - Make group titles in salience module fixed width, avoid size jumping   around when examples are selected.
PiperOrigin-RevId: 394745774

--- a/lit_nlp/client/elements/interpreter_controls.css
+++ b/lit_nlp/client/elements/interpreter_controls.css
@@ -50,6 +50,7 @@
 .control-holder {
   padding-top: 8px;
   display: flex;
+  align-items: center;
 }
 
 .control {
@@ -76,10 +77,27 @@
 .slider-holder {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   padding-right: 5px;
+  width: 50%;
+}
+
+input[type="range"] {
+  min-width: 60px;
+  flex: 1;
 }
 
 .slider-label {
   color: gray;
   font-size: 8pt;
+  min-width: 3em;
+}
+
+.slider-label-start {
+  text-align: end;
+  min-width: 1em;
+}
+
+.slider-value {
+  min-width: 2em;
 }
