--- a/lit_nlp/client/modules/salience_map_module.css
+++ b/lit_nlp/client/modules/salience_map_module.css
@@ -2,6 +2,7 @@
   text-align: start;
   vertical-align: baseline;
   padding: 5px;
+  width: 200px;
 }
 
 .group-container {
